Update issue templates

--- a/.github/ISSUE_TEMPLATE/회의록.md
+++ b/.github/ISSUE_TEMPLATE/회의록.md
@@ -1,7 +1,7 @@
 ---
-name: YYYY년 MM월 DD일 회의록
+name: 회의록
 about: 회의를 통해 개선할 사항을 논의합니다.
-title: "[MINUTES]"
+title: "[회의록] YYYY년 MM월 DD일 "
 labels: ''
 assignees: jhan117
 
